Fixed bug #39322 (proc_terminate() destroys process resource)